Przetłumaczona większa część programu i poprawki.

--- a/src/Interface.properties
+++ b/src/Interface.properties
@@ -3,13 +3,17 @@ loader.loading = \u0141adowanie niezb\u0119dnych plików...
 loader.updateDone = Instalowanie aktualizacji...
 loader.connectionError = Wyst\u0105pi\u0142 problem z po\u0142\u0105czeniem!
 loader.updateStarted = Rozpoczynam aktualizacje...
+loader.checking = Sprawdzanie aktualizacji...
 loader.updateError = Wyst\u0105pi\u0142 problem z aktualizacj\u0105!
 loader.versionOk = Wersja jest aktualna!
-
+# ================================================================================================================ #
+updater.title = Sprawdzanie aktualizacji...
+updater.developerMode = Ta opcja jest niedost\u0119pna ze wzgl\u0119du na uruchomiony tryb developera.
+updater.updateReady = Aktualizacja jest dost\u0119pna aby j\u0105 pobra\u0107 uruchom ponownie program.\nPami\u0119taj aby mie\u0107 w\u0142\u0105czone automatyczne aktualizacje!
+updater.updateError = Nie mo\u017Cna po\u0142\u0105czy\u0107 si\u0119 z serwerem.
+updater.versionOk = Twoja wersja jest aktualna.
 # ================================================================================================================ #
 main.version = Wersja programu:
-# ================================================================================================================ #
-
 # ================================================================================================================ #
 main.selectModule = Wybierz modu\u0142
 main.selectModule.lessonPlan = Mój plan lekcji
@@ -17,21 +21,39 @@ main.selectModule.eventsEditor = Moje wydarzenia
 main.selectModule.gym = Moja si\u0142ownia
 main.selectModule.exit = Wyjd\u017A z programu
 # ================================================================================================================ #
-
-# ================================================================================================================ #
 main.settings = Ustawienia
 main.settings.base = Ustawienia ogólne
-# ================================================================================================================ #
-
 # ================================================================================================================ #
 main.help = Pomoc
 main.help.updates = Sprawd\u017A aktualizacje
 main.help.about = O programie
 # ================================================================================================================ #
-
-# ================================================================================================================ #
 options.interface = J\u0119zyk interfejsu:
 options.interfaceNote = Po zmianie j\u0119zyka wymagany jest restart aplikacji.
 options.autoUpdates = Automatyczne aktualizacje
 options.buttonReturn = Wró\u0107 do menu.
+# ================================================================================================================ #
+events.set = Zaplanowane wydarzenia
+events.eventName = Nazwa wydarzenia
+events.comment = Komentarz
+events.callWhen = Wywo\u0142aj gdy
+events.hint = D\u0142ugo\u015B\u0107 tekstu 1-64
+events.disableEvent = Wy\u0142\u0105cz wydarzenie
+events.enterDate = Wprowad\u017A date
+# ================================================================================================================ #
+events.taskType = Rodzaj zadania
+events.taskType.show = Wy\u015Bwietl komunikat
+events.taskType.shutdown = Wy\u0142\u0105cz komputer
+events.taskType.logoff = Wyloguj
+# ================================================================================================================ #
+events.message = Komunikat
+events.newEvent = Nowe wydarzenie
+events.applyEvent = Zastosuj
+events.editEvent = Edytuj wydarzenie
+events.removeEvent = Usu\u0144 wydarzenie
+events.save = Zapisz wszystko
+events.return = Powrót
+# ================================================================================================================ #
+events.errors.eventExist = Wyst\u0105pi\u0142 b\u0142\u0105d!\nPrawdopodobnie podobne wydarzenie zosta\u0142o ju\u017C utworzone!\nStwórz inne wydarzenie aby doda\u0107 je do listy.
+events.errors.badRegularExpression = Prosimy uzupe\u0142ni\u0107 wszystkie pola wed\u0142ug schematu!
 # ================================================================================================================ #
