Plan przetłumaczony, wywalone undo i redo #done bez kappi

--- a/src/Interface.properties
+++ b/src/Interface.properties
@@ -57,3 +57,14 @@ events.return = Powrót
 events.errors.eventExist = Wyst\u0105pi\u0142 b\u0142\u0105d!\nPrawdopodobnie podobne wydarzenie zosta\u0142o ju\u017C utworzone!\nStwórz inne wydarzenie aby doda\u0107 je do listy.
 events.errors.badRegularExpression = Prosimy uzupe\u0142ni\u0107 wszystkie pola wed\u0142ug schematu!
 # ================================================================================================================ #
+plan.return = Powrót
+plan.save = Zapisz zmiany
+plan.hour = Godziny
+plan.monday = Poniedzia\u0142ek
+plan.tuesday = Wtorek
+plan.wednesday = \u015Aroda
+plan.thursday = Czwartek
+plan.friday = Pi\u0105tek
+plan.addRow = Dodaj rz\u0105d
+plan.delRow = Usu\u0144 rz\u0105d
+# ================================================================================================================ #
