--- a/src/Interface.properties
+++ b/src/Interface.properties
@@ -68,3 +68,45 @@ plan.friday = Pi\u0105tek
 plan.addRow = Dodaj rz\u0105d
 plan.delRow = Usu\u0144 rz\u0105d
 # ================================================================================================================ #
+gym.return = Powrót
+gym.save = Zapisz
+gym.info = Informacje
+gym.masa_kg = Masa cia\u0142a(kg)
+gym.obw_klatki = Obwód klatki piersiowej
+gym.obw_brzucha = Obwód brzucha
+gym.obw_bic = Obwód Bicepsa
+gym.zaw_dod = Zawarto\u015B\u0107 dodatkowa
+gym.kalks = Kalkulator spalania kalorii
+gym.plany_t = Plany treningowe
+gym.rodz_akt = Rodzaj aktywno\u015Bci:
+gym.wyb_rodz_akt = Wybierz aktywno\u015B\u0107
+gym.aerobik = Aerobik
+gym.boks = Boks
+gym.jazda_row = Jazda na rowerze
+gym.bieg8 = bieg(ok.8km/h)
+gym.bieg15 = bieg(ok.15km/h)
+gym.jazda_n = Jazda na nartach
+gym.koszykowka = Koszykówka
+gym.siatkowka = Siatkówka
+gym.skakanka = Skakanka
+gym.trampolina = Skoki na trampolinie
+gym.kregle = Gra w kr\u0119gle
+gym.jazda_d = Jazda na deskorolce
+gym.spacer = Spacer
+gym.golf = Golf
+gym.czas_min = Czas(min):
+gym.oblicz = Oblicz
+gym.spalone_k = Spalone kalorie:
+gym.dod_plan = Dodaj plan treningowy
+gym.wys_plan = Wy\u015Bwietl plan
+gym.cwiczenie = \u0106wiczenie
+gym.powtorzenia = Ilo\u015B\u0107 powtórze\u0144
+gym.dodaj = Dodaj
+gym.naz_planu = Nazwa planu:
+gym.plec = P\u0142e\u0107
+gym.LBM = LBM - masa cia\u0142a bez tkanki t\u0142uszczowej
+gym.wzrost_cm = Wzrost(cm)
+gym.masaLBM = Masa cia\u0142a bez tkanki t\u0142uszczowej to:
+gym.wzrost_m = Wzrost(m)
+gym.BMI = Twoje BMI to:
+# ================================================================================================================ #
