--- a/src/Interface.properties
+++ b/src/Interface.properties
@@ -83,8 +83,8 @@ gym.wyb_rodz_akt = Wybierz aktywno\u015B\u0107
 gym.aerobik = Aerobik
 gym.boks = Boks
 gym.jazda_row = Jazda na rowerze
-gym.bieg8 = bieg(ok.8km/h)
-gym.bieg15 = bieg(ok.15km/h)
+gym.bieg8 = Bieg(ok.8km/h)
+gym.bieg15 = Bieg(ok.15km/h)
 gym.jazda_n = Jazda na nartach
 gym.koszykowka = Koszykówka
 gym.siatkowka = Siatkówka
@@ -104,9 +104,13 @@ gym.powtorzenia = Ilo\u015B\u0107 powtórze\u0144
 gym.dodaj = Dodaj
 gym.naz_planu = Nazwa planu:
 gym.plec = P\u0142e\u0107
-gym.LBM = LBM - masa cia\u0142a bez tkanki t\u0142uszczowej
 gym.wzrost_cm = Wzrost(cm)
 gym.masaLBM = Masa cia\u0142a bez tkanki t\u0142uszczowej to:
 gym.wzrost_m = Wzrost(m)
 gym.BMI = Twoje BMI to:
+gym.male = M\u0119\u017Cczyzna
+gym.female = Kobieta
+gym.bad_weight = Masa cia\u0142a zosta\u0142a b\u0142\u0119dnie podana
+gym.bad_height = Wzrost zosta\u0142 b\u0142\u0119dnie podany
+gym.bad_time = Czas zosta\u0142 b\u0142\u0119dnie podany
 # ================================================================================================================ #
